--- a/client/src/styles/header.css
+++ b/client/src/styles/header.css
@@ -8,9 +8,10 @@
   text-align: center;
 }
 .logo img {
-  width: calc(100% - 60%);
+  /* width: calc(100% - 60%); */
   object-fit: contain;
   margin-top: -40px;
+  width: 100px;
 }
 
 .logo h5 {
@@ -80,7 +81,8 @@
 
 @media only screen and (max-width: 992px) {
   .logo img {
-    width: calc(100% - 70%);
+    /* width: calc(100% - 70%); */
+    width: 70px;
   }
   .logo h5 {
     font-size: 0.8rem;
